--- a/sample/index.html
+++ b/sample/index.html
@@ -38,28 +38,31 @@
       <div class="slide-text">
         <p>The functions of the old ones are just too limited... Let's enable some custom code...</p>
 		<p>The revolutionary innovation of storing programs in memory replaced the switches and wiring with readily changed software.</p>
-		<p><a href = "#devevloping">Keep Working</a></p>
+		<p><a href = '#developing'>Keep Working</a></p>
         <div class="event-text"></div>
       </div>
       <div class="menu"><div class="inventory-box"></div></div>
     </div>
-	<div id="developing" class="step slide" data-x="1500">
-      <div class="slide-text" style = "background-image:url('eniac.jpg');color:#ffffff">
+	<div id="developing" class="step slide" data-x="3000">
+      <div class="slide-text" style = "background-image:url('eniac.jpg');color:white;">
 		<p>
 		The result was ENIAC, the first large-scale computer to run at electronic speed without being slowed by any mechanical parts. For a decade, until a 1955 lightning strike, ENIAC may have run more calculations than all mankind had done up to that point.</p>
-		</p>
         <div class="event-text"></div>
       </div>
-      <div class="menu"><div class="inventory-box"><a href = "#inside"><img src = "tools.png" /></a></div></div>
+      <div class="menu"><div class="inventory-box"><a href = "#inside">OPEN</a></div></div>
     </div>	
-	<div id="inside" class="step slide" data-x="1500">
-      <div class="slide-text" style = "">
+	<div id="inside" class="step slide" data-x="4500">
+      <div class="slide-text">
+		<p>The Stored Programs: birth of software</p>
+		<p>Fifty-two minutes. That’s how long the experimental Manchester “Baby” ran a 17-instruction program using a “memory tube” devised by Freddy Williams and Tom Kilburn. On June 21st, 1948, the stored-program computer had been born.<br />
+		By 1949, the Manchester University team had developed a full-scale version: the Manchester Mark I.</p>
 		<p>
-		The result was ENIAC, the first large-scale computer to run at electronic speed without being slowed by any mechanical parts. For a decade, until a 1955 lightning strike, ENIAC may have run more calculations than all mankind had done up to that point.</p>
+		<a href = "#supercomputer">I'm not satisfied with the performance!</a><br />
+		<a href = "#inet">I'm feeling lonely</a>
 		</p>
         <div class="event-text"></div>
       </div>
-      <div class="menu"><div class="inventory-box"><a href = "#inside"><img src = "tools.png" /></a></div></div>
+      <div class="menu"><div class="inventory-box"></div></div>
     </div>
     <div id="end" class="step slide" data-x="-1500">
       <div class="slide-text" style = "color:white;background-image:url('old_machine.jpg');">
@@ -70,7 +73,27 @@
 		<div class="event-text"></div>
       </div>
       <div class="menu"><a href="#" onclick='location = window.location.pathname; return false;'>START OVER</a></div>
+    </div>
+	<div id="supercomputer" class="step slide" data-x="6000">
+      <div class="slide-text" style = "background-image:url('supercomputer.jpg');color:white;">
+		<p>
+		Supercomputer pioneer Seymour Cray became a legend at Control Data Corporation. But that company grew quickly and proved too bureaucratic for him. So in 1972 Cray launched his own firm: Clay Research Inc.</p>
+        <div class="event-text"></div>
       </div>
+      <div class="menu"><div class="inventory-box"></div></div>
+    </div>	
+	<div id="inet" class="step slide" data-x="6000">
+      <div class="slide-text" style = "background-image:url('inet.jpg');">
+		<marquee direction = "up" height = "100%">
+At the world’s biggest physics laboratory, CERN in Switzerland, English programmer and physicist Tim Berners-Lee submitted two proposals for what became the Web. Neither was approved. He proceeded anyway.<br />
+
+With only unofficial support from his boss and interested coworkers, he created “WorldWideWeb” on an advanced NeXT computer in 1990. It featured a server, HTML, URLs, and the first browser.<br />
+
+That browser also functioned as an editor—like a word processor connected to the Internet – which reflected his original vision that the Web also incorporate authoring and personal organization tools.</marquee>
+        <div class="event-text"></div>
+      </div>
+      <div class="menu"><div class="inventory-box"></div></div>
+    </div>	
 </div>
 
 <script src="impress.js"></script>
